--- a/Lecture3Python/Embed1/CMakeLists.txt
+++ b/Lecture3Python/Embed1/CMakeLists.txt
@@ -8,13 +8,18 @@ project(EmbedPythonBuild)
 # This is the name of the Exe change this and it will change everywhere
 set(TargetName EmbedPython)
 find_package (Python COMPONENTS Interpreter Development)
-
+# see what platform we are on and set platform defines
 
 
 add_executable(${TargetName})
+# on my mach need to add this not sure why as 
+# shouldn't be using the homebrew python just pyenv
+if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
+   target_link_directories(${TargetName} PRIVATE /opt/homebrew/lib)
+endif()
 
 target_sources(${TargetName} PRIVATE ${PROJECT_SOURCE_DIR}/embed.cpp)
-target_link_libraries(${TargetName} PRIVATE Python::Python)
+target_link_libraries(${TargetName} PRIVATE Python::Python -fPIC)
 
 
 
