added simple gui testing demo

--- a/QtPyStarter/pyproject.toml
+++ b/QtPyStarter/pyproject.toml
@@ -4,4 +4,4 @@ version = "0.1.0"
 description = "Simple QtPy Demo"
 readme = "README.md"
 requires-python = ">=3.11"
-dependencies = ["qtpy","pyside2"]
+dependencies = ["qtpy"]
