--- a/MySQL/Taskfile_linux.yml
+++ b/MySQL/Taskfile_linux.yml
@@ -1,9 +1,9 @@
 version: "3"
 
-# most tasks will run from the Task root directory, but the lint is run from the current directory
+
 
 tasks:
-  create_image:
+  create-image:
     cmds:
       - podman pull mysql
       - |
